--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,17 +13,19 @@
 <body>
 
     <section id="main">
-        <div class="container">
+        <div class="container"  >
             <div class="row">
                 <div class="col-12 py-5">
                     <div class="d-flex align-items-center justify-content-between">
                         <h3>Todos</h3>
-                        <div>
-                            <form action="" class="d-flex  align-items-center gap-3">
-                                <input type="text" class="form-control" placeholder="Enter Task" aria-label="Username"
-                                    aria-describedby="basic-addon1" id="input">
-                                <button type="button" onclick="addTodo()" class="btn btn-primary">Add</button>
-                            </form>
+                        <div class="d-flex  align-items-center gap-3">
+                            <input type="text" class="form-control" placeholder="Enter Task" aria-label="Username"
+                                aria-describedby="basic-addon1" id="todo-input" >
+                            <button type="button" class="btn btn-primary" onclick="addFunction()">Add</button>
+                        </div>
+                        <div class="d-flex  align-items-center gap-3">
+                            <input type="text" class="form-control" placeholder="Search a todo" aria-label="Username"
+                                aria-describedby="basic-addon1" id="search-input">
                         </div>
                     </div>
                 </div>
@@ -39,13 +42,12 @@
                 <hr />
             </div>
 
-            <div id="todo">
-                
+            <div class="container" id="main-container" >
+
             </div>
-
-
         </div>
     </section>
+
 
     <script src="./script.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
