--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                     <h6 class="text-secondary">Action</h4>
                 </div>
 
-                <hr />
+                <hr style="margin-bottom: -30px;" />
             </div>
 
             <div class="container" id="main-container" >
@@ -47,7 +47,6 @@
             </div>
         </div>
     </section>
-
 
     <script src="./script.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
