--- a/Api Todo/index.html
+++ b/Api Todo/index.html
@@ -9,25 +9,27 @@
     <!-- tostyfiy link  -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
 
     <section id="main">
-        <div class="container position-sticky top-0 bg-white"  >
+        <div class="container position-sticky top-0 bg-white">
             <div class="row">
                 <div class="col-12 py-5">
                     <div class="d-flex align-items-center justify-content-between">
                         <h3>Todos</h3>
                         <div class="d-flex  align-items-center gap-3">
                             <input type="text" class="form-control" placeholder="Enter Task" aria-label="Username"
-                                aria-describedby="basic-addon1" id="todo-input" >
+                                aria-describedby="basic-addon1" id="todo-input">
                             <button type="button" class="btn btn-primary" onclick="addButton()">Add</button>
                         </div>
                         <div class="d-flex  align-items-center gap-3">
-                            <input type="text" class="form-control" placeholder="Search a todo" aria-label="Username"
-                                aria-describedby="basic-addon1" id="search-input">
+                            <input type="search" class="form-control" placeholder="Search a todo" onsearch="onSearch()"
+                                aria-label="Username" aria-describedby="basic-addon1" id="search-input">
                         </div>
                     </div>
                 </div>
@@ -41,11 +43,11 @@
                     <h6 class="text-secondary">Action</h4>
                 </div>
 
-                <hr  class="mt-2">
+                <hr class="mt-2">
             </div>
 
         </div>
-        <div class="container mt-2" id="main-container" >
+        <div class="container mt-2" id="main-container">
 
         </div>
     </section>
@@ -54,7 +56,9 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./script.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
